--- a/slides/asciidocs-slides/index.adoc
+++ b/slides/asciidocs-slides/index.adoc
@@ -1,10 +1,14 @@
-= Demo-Presentation1
-Thomas W. Stütz
+= GitHub Packages
+Benjamin Besic
 1.0, 2020-08-22
 ifndef::sourcedir[:sourcedir: ../src/main/java]
 ifndef::imagesdir[:imagesdir: images]
 ifndef::backend[:backend: html5]
 :icons: font
+:imagesdir: images
+:customcss: css/presentation.css
+:revealjs_parallaxBackgroundSize: cover
+:revealjs_parallaxBackgroundImage: images/background.jpg
 
 == First Slide
 
